@startuml
Audience --> Bag: bag
Audience ..> Ticket

Bag --> Invitation: invitation
Bag --> Ticket: ticket

TicektSeller --> TicketOffice: ticketOffice
TicektSeller ..> Ticket
TicektSeller ..> Audience

TicketOffice --> Ticket: tickets

Theater --> TicektSeller: ticketSeller
Theater ..> Audience

class Audience {
  +buy(ticket)
}

class Bag {
  +hold(ticket)
}

class Invitation {
  
}

class Ticket {
  +getFee()
}

class TicektSeller {
  +sellTo()
}

class TicketOffice {
  +getTicket()
  +minusAmount(amount)
  +plusAmount(amount)
}

class Theater {
  +enter(audience)
}
@enduml